# calamares-settings-mamolinux

./: .gitignore  Makefile
common/basicwallpaper/: CMakeLists.txt
common/modules/: mount.conf
common/modules/pkgselectprocess/: CMakeLists.txt  PackageSelectProcess.cpp  PackageSelectProcess.h  checkpackage-backend.cpp  module.desc
debian/: calamares-settings-mamolinux.install  calamares-settings-mamolinux.lintian-overrides  calamares-settings-mamolinux.postinst  calamares-settings-ubuntu-common.links  changelog  control  copyright  qmldeps.overrides  rules
mamolinux/: README.md  calamares-launch-normal  calamares-logs-helper  kvantum.kvconfig  mamolinux-calamares-advanced.desktop.in  mamolinux-calamares.desktop.in  settings-advanced.conf  settings-default.conf
mamolinux/modules/: after_bootloader_context.conf  automirror.conf  bootloader.conf  displaymanager.conf  mount.conf  netinstall-applications.yaml  netinstall-communication.conf  netinstall-communication.yaml  netinstall-default.conf  netinstall-default.yaml  netinstall-desktop.conf  netinstall-desktop.yaml  netinstall-development.conf  netinstall-development.yaml  netinstall-drivers.yaml  netinstall-filemanagers.conf  netinstall-fonts.conf  netinstall-fonts.yaml  netinstall-gaming.conf  netinstall-gaming.yaml  netinstall-graphics.conf  netinstall-graphics.yaml  netinstall-internet.yaml  netinstall-login.conf  netinstall-login.yaml  netinstall-multimedia.conf  netinstall-multimedia.yaml  netinstall-nvidia.conf  oemid.conf  (+16 more)
scripts/: mamolinux-advanced-install  mamolinux-default-install  mamolinux-install
(+25 files in other folders)
